Bug 154701 - Writer move paragraph not working properly with Outline Folding (applying a style moves cursor to heading)
Summary: Writer move paragraph not working properly with Outline Folding (applying a s...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:24.2.0
Keywords: bibisected, bisected, regression
: 156370 158118 159135 (view as bug list)
Depends on:
Blocks: Writer-Outline-Folding
  Show dependency treegraph
 
Reported: 2023-04-07 16:37 UTC by ejbsfo@gmail.com
Modified: 2024-01-31 06:36 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ejbsfo@gmail.com 2023-04-07 16:37:53 UTC
Recently the move paragraph feature (CTRL+ALT+UP/DOWN arrow) has stopped working properly. The paragraph moves as expected, but instead of the cursor staying with the paragraph, it jumps to the nearest header.

The outline folding option (Tools>Options>Writer>View>Outline folding) feature seems to be the cause. If I turn it off, the move paragraph feature works properly. If I turn it back on, it jumps to the previous Header (folding point).

This behavior has been consistent since I upgraded to 7.5.x from 7.4.x.
LO Writer 7.5.2.2, Windows 10
Comment 1 Dieter 2023-04-09 20:49:31 UTC
Have you reset your user profile or tested in safe mode(Help -> Restart in Safe Mode)?
=> NEEDINFO
Comment 2 ejbsfo@gmail.com 2023-08-03 15:35:54 UTC
I just received your request for more info, sorry about the delay.

Yes, I have reset the user profile, to brand new and a saved working copy. Neither change affected the bug.

Yes, I have tried safe mode. No change to bug.

I've also encountered the bug on a second computer with different install (still 7.5.x) and user profile.
Comment 3 Buovjaga 2023-09-12 06:16:07 UTC
Bibisected with linux-64-7.5 to a3238a8e35c9c649069ef67ffa83e0d83f25936b
tdf#151521 Fix para applied style sub-level remains visible when parent outline content is folded

Repro still with
Arch Linux 64-bit, X11
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f5bcc34580d02f92af01963155f2d54776a5249b
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 12 September 2023
Comment 4 Jim Raykowski 2023-10-12 22:51:01 UTC
Here is a patch that fixes this and hopefully doesn't break something else:
https://gerrit.libreoffice.org/c/core/+/157899
Comment 5 Commit Notification 2023-10-15 06:56:31 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/148394645cf753e8548b7cff6effe4ae69ca0fbd

tdf#154701 Fix move paragraph not working properly with outline folding

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Jim Raykowski 2023-10-15 14:46:38 UTC
I think this works as expected now. Marking as fixed.
Comment 7 Buovjaga 2023-11-13 18:00:41 UTC
*** Bug 158118 has been marked as a duplicate of this bug. ***
Comment 8 Buovjaga 2024-01-26 11:34:09 UTC Comment hidden (obsolete)
Comment 9 stragu 2024-01-28 06:50:07 UTC
*** Bug 159135 has been marked as a duplicate of this bug. ***
Comment 10 stragu 2024-01-31 04:22:10 UTC
*** Bug 156370 has been marked as a duplicate of this bug. ***
Comment 11 stragu 2024-01-31 06:36:28 UTC
Verified in:

Version: 24.2.0.2 (X86_64) / LibreOffice Community
Build ID: b1fd3a6f0759c6f806568e15c957f97194bbec8f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks Jim!