tdf#154701 Fix move paragraph not working properly with outline folding

Change-Id: Ibb4706fae198fada0f143b1b25149fcbcc5c41d1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157899
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>